--- a/src/assets/styles/media.scss
+++ b/src/assets/styles/media.scss
@@ -274,31 +274,31 @@
       }
    }
 
-   .home__delivery {
-      padding: 40px 0;
+   // .home__delivery {
+   //    padding: 40px 0;
 
-      .delivery__body {
-         .green__btn {
-            font-size: 23px;
-            line-height: 25px;
-         }
+   //    .delivery__body {
+   //       .green__btn {
+   //          font-size: 23px;
+   //          line-height: 25px;
+   //       }
 
-         .title {
-            font-size: 27px;
-            line-height: 35px;
-         }
-      }
-   }
+   //       .title {
+   //          font-size: 27px;
+   //          line-height: 35px;
+   //       }
+   //    }
+   // }
 
-   .footer {
-      .footer__wrapper {
-         .footer__info {
-            .info__phones {
-               gap: 30px;
-            }
-         }
-      }
-   }
+   // .footer {
+   //    .footer__wrapper {
+   //       .footer__info {
+   //          .info__phones {
+   //             gap: 30px;
+   //          }
+   //       }
+   //    }
+   // }
 
    .page__product {
       padding: 130px 0 35px;
@@ -730,31 +730,31 @@
       }
    }
 
-   .footer {
-      .footer__wrapper {
-         flex-direction: column;
-         margin-bottom: 25px;
+   // .footer {
+   //    .footer__wrapper {
+   //       flex-direction: column;
+   //       margin-bottom: 25px;
 
-         .footer__info {
-            display: flex;
-            gap: 80px;
+   //       .footer__info {
+   //          display: flex;
+   //          gap: 80px;
 
-            .info__phones {
-               flex-direction: column;
-               gap: 0;
-            }
-         }
+   //          .info__phones {
+   //             flex-direction: column;
+   //             gap: 0;
+   //          }
+   //       }
 
-         .info__social {
-            display: flex;
-            gap: 70px;
-         }
-      }
+   //       .info__social {
+   //          display: flex;
+   //          gap: 70px;
+   //       }
+   //    }
 
-      .support {
-         display: none;
-      }
-   }
+   //    .support {
+   //       display: none;
+   //    }
+   // }
 
 
    .page__delivery {
@@ -1199,63 +1199,63 @@
       }
    }
 
-   .home__delivery {
-      .delivery__body {
-         background-size: 70%;
+   // .home__delivery {
+   //    .delivery__body {
+   //       background-size: 70%;
 
-         .title {
-            font-size: 23px;
-            line-height: 33px;
-            margin-bottom: 25px;
-         }
-      }
-   }
+   //       .title {
+   //          font-size: 23px;
+   //          line-height: 33px;
+   //          margin-bottom: 25px;
+   //       }
+   //    }
+   // }
 
-   .footer {
-      .footer__wrapper {
-         .footer__info {
-            gap: 30px;
+   // .footer {
+   //    .footer__wrapper {
+   //       .footer__info {
+   //          gap: 30px;
 
-            .info__phones {
-               .phone {
-                  span {
-                     font-size: 12px;
-                     line-height: 18px;
-                  }
+   //          .info__phones {
+   //             .phone {
+   //                span {
+   //                   font-size: 12px;
+   //                   line-height: 18px;
+   //                }
 
-                  .phone__link {
-                     font-size: 14px;
-                  }
-               }
+   //                .phone__link {
+   //                   font-size: 14px;
+   //                }
+   //             }
 
 
-            }
+   //          }
 
-            .info__data {
-               font-size: 12px;
-               line-height: 20px;
-            }
+   //          .info__data {
+   //             font-size: 12px;
+   //             line-height: 20px;
+   //          }
 
-            .info__email {
-               font-size: 15px;
-               line-height: 20px;
-            }
+   //          .info__email {
+   //             font-size: 15px;
+   //             line-height: 20px;
+   //          }
 
-         }
+   //       }
 
-         .info__social {
-            gap: 30px;
+   //       .info__social {
+   //          gap: 30px;
 
-            a {
-               font-size: 14px;
-               line-height: 20px;
-               letter-spacing: 3.08517px;
-               margin-bottom: 20px;
-            }
+   //          a {
+   //             font-size: 14px;
+   //             line-height: 20px;
+   //             letter-spacing: 3.08517px;
+   //             margin-bottom: 20px;
+   //          }
 
-         }
-      }
-   }
+   //       }
+   //    }
+   // }
 
    .page__delivery {
       padding: 75px 0 50px;
@@ -1363,22 +1363,22 @@
       }
    }
 
-   .home__delivery {
-      .delivery__body {
-         padding: 30px 20px 40px 20px;
-         background-size: 70%;
+   // .home__delivery {
+   //    .delivery__body {
+   //       padding: 30px 20px 40px 20px;
+   //       background-size: 70%;
 
-         .title {
-            font-size: 20px;
-            line-height: 30px;
-         }
+   //       .title {
+   //          font-size: 20px;
+   //          line-height: 30px;
+   //       }
 
-         .green__btn {
-            font-size: 20px;
-            line-height: 20px;
-         }
-      }
-   }
+   //       .green__btn {
+   //          font-size: 20px;
+   //          line-height: 20px;
+   //       }
+   //    }
+   // }
 
    .page__product {
       padding-bottom: 0;
@@ -1686,48 +1686,48 @@
       }
    }
 
-   .home__delivery {
-      padding: 20px 0;
+   // .home__delivery {
+   //    padding: 20px 0;
 
-      .delivery__body {
-         padding: 20px;
-         background-size: 60%;
+   //    .delivery__body {
+   //       padding: 20px;
+   //       background-size: 60%;
 
-         .title {
-            font-size: 18px;
-            line-height: 25px;
-         }
+   //       .title {
+   //          font-size: 18px;
+   //          line-height: 25px;
+   //       }
 
-         .green__btn {
-            font-size: 16px;
-            line-height: 20px;
-         }
-      }
-   }
+   //       .green__btn {
+   //          font-size: 16px;
+   //          line-height: 20px;
+   //       }
+   //    }
+   // }
 
-   .footer {
-      border-radius: 8px 8px 0 0;
+   // .footer {
+   //    border-radius: 8px 8px 0 0;
 
-      .footer__wrapper {
-         .footer__info {
-            flex-direction: column;
-            gap: 0;
-         }
+   //    .footer__wrapper {
+   //       .footer__info {
+   //          flex-direction: column;
+   //          gap: 0;
+   //       }
 
-         .info__social {
-            flex-direction: column;
-            gap: 0;
-         }
-      }
+   //       .info__social {
+   //          flex-direction: column;
+   //          gap: 0;
+   //       }
+   //    }
 
-      .footer__rules {
-         .rules__link {
-            margin-right: 15px;
-            font-size: 12px;
-            line-height: 18px;
-         }
-      }
-   }
+   //    .footer__rules {
+   //       .rules__link {
+   //          margin-right: 15px;
+   //          font-size: 12px;
+   //          line-height: 18px;
+   //       }
+   //    }
+   // }
 
    .page__delivery {
       padding-bottom: 20px;
