--- a/admin/src/assets/styles/variables.scss
+++ b/admin/src/assets/styles/variables.scss
@@ -1,5 +1,5 @@
 $main-color:#00AC4E;
-$light-color:#00ac4d20;
+$light-color:#dff5e9;
 $light1-color:#00ac4d6d;
 $main-font: 'TT Norms Pro',
 sans-serif;
