complete Category View and Detail; fix rating bugs

--- a/admin/src/assets/styles/variables.scss
+++ b/admin/src/assets/styles/variables.scss
@@ -1,6 +1,7 @@
 $main-color:#00AC4E;
 $light-color:#dff5e9;
 $light1-color:#00ac4d6d;
+$light2-color:#eefff6;
 $main-font: 'TT Norms Pro',
 sans-serif;
 $font:'TT Hoves',
