--- a/frontend/src/assets/styles/media.scss
+++ b/frontend/src/assets/styles/media.scss
@@ -710,7 +710,7 @@
                   margin-bottom: 15px;
                }
 
-               .green {
+               .status {
                   img {
                      display: inline-block;
                   }
@@ -739,6 +739,10 @@
                }
 
                .product {
+                  .product__img {
+                     margin-left: 10px;
+                  }
+
                   .product__name {
                      width: 200px;
                   }
