fix upload image and some bugs in homebanner

--- a/frontend/src/assets/styles/media.scss
+++ b/frontend/src/assets/styles/media.scss
@@ -869,6 +869,7 @@
       .home__banner-wrapper {
          .green__btn {
             font-size: 16px;
+            margin-bottom: 10px;
          }
 
          .title {
@@ -877,7 +878,7 @@
          }
 
          .subtitle {
-            font-size: 12px;
+            font-size: 14px;
             margin-bottom: 10px;
          }
 
@@ -984,15 +985,11 @@
          }
 
          .subtitle {
-            font-size: 10px;
             margin-bottom: 7px;
             line-height: 15px;
          }
 
-         .green__btn {
-            font-size: 14px;
-            line-height: 16px;
-         }
+
       }
    }
 
